[project]
name = "coderl"
version = "1.0.0"
description = "Agentic Code Review RL Environment — OpenEnv-compliant"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.25.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
exclude = ["__pycache__*", "data*", ".git*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt"]